# Python_my_example

./: Draw_line.py  Main_Type.py  OOP_r4.py  PyQt.py  YourVisioFile.vsdx  Zip.py  all_any.py  assert.py  class.py  colorama_r1.py  data_struct_list.py  decorator_v1.py  decorator_v2.py  def_return_pass.py  draw_line_vektor.py  exel.py  file_r1.py  for_in.py  if_elif_else.py  imoprt_from_r1.py  index_r1.py  int.py  lambda.py  list.py  longest_common_prefix.py  map.py  my_module.py  networkx matplotlib_r1.py  new_folder_r2.py  num_v1r0.py  operations with numbers_v1r0.py  prime number_v8.py  print.py  rounding.py  set_frozenset_r1.py  table_in_terminal.py  test_math.py  test_visio_r1.py  text_color_rich.py  try_except_r1.py  (+4 more)
Algorithms/: prime number_v2.py  prime number_v7.py  prime number_v8.py
Basic concepts/: Main_Type.py  With_as_r1.py  Zip.py  addition.py  assert.py  class.py  dialog.py  get_python_version.py  hello_textcolor.py  imoprt_from_r1.py  imoprt_from_r2.py  len.py  map.py  print.py  rounding.py  slicing.py  ternary operator.py  while.py
Bogdan/: 1_main_types.py  2_built_in_functions.py  3_statements.py  4_varible.py  6_int.py
Classes_Классы/: classes_1.py  classes_2.py
Data structures/: dictionary.py  str.py
DataBase_SQLlite_test_people/: People_BD.db  SQLlite_test_v1r1.py
DearPyGui/: test.py
Experiments/: Flet_my_example_v1r1.py  (+1 more)
PySide6_my_example_v1/: PySide6_my_example_v0r1.py  PySide6_my_example_v1r1.py  pyproject.toml
modbus_rtu_test/: main.py  pyproject.toml  библиотеки для модбаса.txt
pydantic_example/: main.py  pyproject.toml
(+101 files in other folders)
