[tool.poetry]
name = "modbus-rtu-test"
version = "0.1.0"
description = ""
authors = ["Maksim <voronovmaksim88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
colorama = "^0.4.6"
minimalmodbus = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
