[tool.poetry]
name = "pydantic-example"
version = "0.1.0"
description = ""
authors = ["voronovmaksim88 <voronovmaksim88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = {extras = ["email"], version = "^2.9.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
